@@ -1,7 +1,6 @@
 * "Move" option in plugin context menu
 * LXPanelPluginInit::activatable flag to allow activation with hotkey
 * accessibility (keys-only; single-button-mouse; special devices)
-* 'volumealsa' improvements
 * compose new custom launcher in launchbar config dialog
 * special launchers support ()
 * launchbar template with LockScreen and Shutdown
